# api

./: .env.template  .gitignore  Dockerfile  Justfile  README.md  docker-compose.yml  pyproject.toml
.github/workflows/: dev.yml  main.yml
app/: __init__.py  constants.py  env.py  error_handlers.py  main.py
app/api/routers/: __init__.py  auth.py  profile.py
app/api/security/: cookie_auth.py
app/enums/: email.py  finance.py  offerings.py
app/integrations/cache/: __init__.py  redis.py
app/integrations/email/: resend.py
app/integrations/files/: __init__.py  backblaze.py  local.py  typing.py
app/integrations/google/: auth.py  typing.py
app/integrations/workers/: __init__.py  faststream.py
app/orm/: config.py  transactions.py
app/orm/migrations/: 0001_add_user_table.py  0002_add_offering_and_finance_tables.py  0003_add_clients_table.py  0004_add_durations_remove_contracts.py
app/orm/models/: __init__.py  finance.py  offerings.py  users.py
app/repositories/: __init__.py
app/schemas/requests/: _commons.py  pagination.py  users.py
app/schemas/responses/: generic.py  profile.py  users.py
app/scripts/: main.py
app/services/: auth.py  email.py  files.py  offerings.py  users.py  utility.py
app/templates/account_deposit/: body.html  subject.txt
app/templates/account_withdrawal/: body.html  subject.txt
app/templates/credentials_reset/: body.html  subject.txt
app/templates/verification/: body.html  subject.txt
app/templates/welcome/: body.html  subject.txt
app/typing/: filters.py  offerings.py  pagination.py
app/utils/: exceptions.py  logger.py  responder.py  retry_breaker.py
app/workers/: email.py
